<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">PPS R-18</string>
    <string name="algorithm"><![CDATA[\n->\t\t\tAlgorithms was developed by an Arab mathematician. It is chalked out step-bystep approach to solve a given problem.\n\n->\t\t\tIt is represented in an English like language and has some mathematical symbols like ->, >, <, = etc. To solve a given problem or to write a program you approach towards solution of the problem in a systematic, disciplined, non-adhoc, step-by-step way is called Algorithmic approach. Algorithm is a penned strategy(to write) to find a solution.\n\n  \tExample:\n Algorithm/pseudo code to add two numbers\n\tStep 1: Start\n\tStep 2:Read the two numbers in to a,b\n\tStep 3: c=a+b\n\tStep 4: write/print c\n\tStep 5: Stop.\n]]></string>
    <string name="pseudocode"><![CDATA[\n->\t\t\tPseudo code is an artificial and informal language that helps programmers develop algorithms.pseudocode is similar to everyday English, it is convenient and user friendly although it is not an actual computer programming language. \n->\t\t\tPsuedocode programs are not actually executed on computer rather they merely help the programmer “think out” a program before attempting to write it in a programming language such as C.\n]]></string>
    <string name="programdsteps"><![CDATA[\n->\t\t\tProgram Development is a multistep process that requires that we understand the problem, develop a solution, write the program, and then test it. \n->\t\t\tWhen we are given the assignment to develop a program, we will be given a program requirements statement and the design of any program interfaces.\n->\t\t\tWe should also receive an overview of the complete project so that we will take the inputs we are given and convert them to the outputs that have been specified. This is known as program design.\n]]></string>
    <string name="understand"><![CDATA[->\t\t\tThe first step in solving any problem is to understand it. By reading the requirements statements carefully, we fully understand it, we review our understanding with the user and the systems analyst to know the exact purpose.\n]]></string>
    <string name="developsolution"><![CDATA[->\t\t\tOnce we fully understand the problem we need to develop our solution.\n->\t\t\t Three tools will help in this task. \n1. Structure chart \n2.Psuedocode \n3.Flowcharts \n->\t\t\tGenerally we will use structure chart and either flowchart or Pseudo code\n->\t\t\tThe structure chart is used to design the whole program .Pseudo code and flowcharts are used to design the individual parts of the program.\n\n STRUCTURE CHART :\n\t\t\t A structure chart, also known as hierarchy chart, shows the functional flow through our program. \n->\t\t\tThe structure chart shows how we are going to break our program into logical steps each step will be a separate module. The structure chart shows the interaction between all the parts (modules) of our program.\n->\t\t\tWe can use flowchart or pseudo code to complete the design of your program will depend on experience and difficulty of the program your designing.\n]]></string>
    <string name="whatthe"><![CDATA[->\t\t\tWhen we write a program, we start with the top box on the structure chart and work our way to the bottom. This is known as top-down implementation. \n->\t\t\tWe will write the programs by using structure chart and flowchart or pseudo code.\n]]></string>
    <string name="testing"><![CDATA[->\t\t\tProgram testing can be a very tedious and time- consuming part of program development. As the programmer we are responsible for completely testing our program. \n->\t\t\tIn largedevelopment projects test engineers are responsible for testing to make sure all the programs work together. \n->\t\t\tThere are 2 types of testing.\n\t\n1. BLACK BOX TESTING:\n->\t\t\tThis is done by the system test engineer and the user. Black box testing is the programs are tested without knowing what is inside it, with out knowing how it works.\n->\t\t\tBlack box test plans are developed by looking only the requirements statement. The test engineer uses these requirements to develop test plans. \n\t\n2. WHITE BOX TESTING:\n->\t\t\tThis is the responsibility of the programmer. \n->\t\t\tWhite box testing assumes that the tester knows everything about the program.\n->\t\t\tExcept for the simplest program, one set of test data will not completely validate a program. \n]]></string>
    <string name="sortinga"><![CDATA[\n->\t\t\tSorting is a process of ordering individual elements of a list according to their proper rank, either in ascending or descending order. A programming logic with few steps which can sort a bunch of elements are called sorting algorithms. … C programming language is the best to start understanding sorting algorithms.\n]]></string>
    <string name="sortingb"><![CDATA[\n->\t\t\tThe selection sort algorithm sorts an array by repeatedly finding the minimum element (considering ascending order) from unsorted part and putting it at the beginning. The algorithm maintains two subarrays in a given array.\n1) The subarray which is already sorted.\n2) Remaining subarray which is unsorted.\n->\t\t\tIn every iteration of selection sort, the minimum element (considering ascending order) from the unsorted subarray is picked and moved to the sorted subarray.\n\nPROGRAM:\n]]></string>
    <string name="sortingc"><![CDATA[#include <stdio.h>
\nvoid selectionsort (int[], int);
\nvoid main()
\n{
\n\t\t\tint a[30], size, i, choice;
\n\t\t\tprintf(“Enter the size of the list: ”);
\n\t\t\tscanf(“%d”, &size);
\n\t\t\tprintf(“Enter %d elements: ”, size);
\n\t\t\tfor (i=0; i<size; i++)
\n\t\t\t\t\t\tscanf("%d", &a[i]);
\n\t\t\tselectionsort (a, size);
\n\t\t\tprintf(“Sorted Elements: ”);
\n\t\t\tfor (i=0; i<size; i++)
\n\t\t\t\t\t\tprintf(“%d ”, a[i]);
\n}
\nvoid selectionsort (int a[], int size)
\n{
\n\t\t\tint i, j, t, min;
\n\t\t\tfor (i=0; i<size-1; i++)
\n\t\t\t{
\n\t\t\t\t\t\tmin = i;
\n\t\t\t\t\t\tfor (j=i; j<size; j++)
\n\t\t\t\t\t\t{
\n\t\t\t\t\t\t\t\t\t\t\t\tif (a[min] > a[j])
\n\t\t\t\t\t\t\t\t\t\t\t\t\t\t\tmin = j;
\n\t\t\t\t\t\t}
\n\t\t\t\t\t\tt = a[i];
\n\t\t\t\t\t\ta[i] = a[min];
\n\t\t\t\t\t\ta[min] = t;
\n\t\t\t}
\n}]]></string>
    <string name="sortingd"><![CDATA[\nOUTPUT:\n
\nEnter the size of the list: 5
\nEnter 5 elements: 5 1 4 2 3
\nSorted Elements: 1 2 3 4 5\n]]></string>
    <string name="sortinge"><![CDATA[\n->\t\t\tInsertion sort algorithm picks elements one by one and places it to the right position where it belongs in the sorted list of elements. In the following C program we have implemented the same logic.\nEXAMPLE:\nInput elements: 89  17  8  12  0\n\t\t->Step 1: 89  17  8  12  0 (the bold elements are sorted list and non-bold unsorted list)\n\t\t->Step 2: 17  89  8  12  0 (each element will be removed from unsorted list and placed at the right position in the sorted list)\n\t\t->Step 3: 8  17  89  12  0\n\t\t->Step 4: 8  12  17  89  0\n\t\t->
Step 5: 0  8  12  17  89\n]]></string>
    <string name="sortingf"><![CDATA[#include <stdio.h>
\nvoid insertionsort (int[], int);
\nvoid main()
\n{
\n\t\t\tint a[30], size, i, choice;
\n\t\t\tprintf(“Enter the size of the list: ”);
\n\t\t\tscanf(“%d”, &size);
\n\t\t\tprintf(“Enter %d elements: ”, size);
\n\t\t\tfor (i=0; i<size; i++)
\n\t\t\t\t\t\tscanf("%d", &a[i]);
\n\t\t\tinsertionsort (a, size);
\n\t\t\tprintf(“Sorted Elements: ”);
\n\t\t\tfor (i=0; i<size; i++)
\n\t\t\t\t\t\tprintf(“%d ”, a[i]);
\n}
\nvoid insertionsort (int a[], int size)
\n{
\n\t\t\tint i, j, t;
\n\t\t\tfor (i=1; i<=size; i++)
\n\t\t\t{
\n\t\t\t\t\t\tfor (j=i; j>0; j—)
\n\t\t\t\t\t\t{
\n\t\t\t\t\t\t\t\t\tif (a[j] < a[j-1])
\n\t\t\t\t\t\t\t\t\t{
\n\t\t\t\t\t\t\t\t\t\t\t\t\t\t\tt = a[j];
\n\t\t\t\t\t\t\t\t\t\t\t\t\t\t\ta[j] = a[j-1];
\n\t\t\t\t\t\t\t\t\t\t\t\t\t\t\ta[j-1] = t;
\n\t\t\t\t\t\t\t\t\t}
\n\t\t\t\t\t\t}
\n\t\t\t}
\n}]]></string>
    <string name="sortingg"><![CDATA[\nOUTPUT:\n
\nEnter the size of the list: 5
\nEnter 5 elements: 5 1 4 2 3
\nSorted Elements: 1 2 3 4 5\n]]></string>
    <string name="sortingh"><![CDATA[\n->\t\t\tBubble sort is also known as sinking sort. This algorithm compares each pair of adjacent items and swaps them if they are in the wrong order, and this same process goes on until no swaps are needed. In the following program we are implementing bubble sort in C language. In this program user would be asked to enter the number of elements along with the element values and then the program would sort them in ascending order by using bubble sorting algorithm logic.\n\nPROGRAM:\n]]></string>
    <string name="sortingi"><![CDATA[#include <stdio.h>
\nvoid bubblesort (int[], int);
\nvoid main()
\n{
\n\t\t\tint a[30], size, i, choice;
\n\t\t\tprintf(“Enter the size of the list: ”);
\n\t\t\tscanf(“%d”, &size);
\n\t\t\tprintf(“Enter %d elements: ”, size);
\n\t\t\tfor (i=0; i<size; i++)
\n\t\t\t\t\t\tscanf(“%d”, &a[i]);
\n\t\t\tbubblesort (a, size);
\n\t\t\tprintf(“Sorted Elements: ”);
\n\t\t\tfor (i=0; i<size; i++)
\n\t\t\t\t\t\tprintf(“%d ”, a[i]);
\n}
\nvoid bubblesort (int a[], int size)
\n{
\n\t\t\tint i, j, t;
\n\t\t\tfor (i=1; i<size; i++)
\n\t\t\t{
\n\t\t\t\t\t\tfor (j=0; j<size-i; j++)
\n\t\t\t\t\t\t{
\n\t\t\t\t\t\t\t\t\tif (a[j] > a[j+1])
\n\t\t\t\t\t\t\t\t\t{
\n\t\t\t\t\t\t\t\t\t\t\t\tt = a[j];
\n\t\t\t\t\t\t\t\t\t\t\t\ta[j] = a[j+1];
\n\t\t\t\t\t\t\t\t\t\t\t\ta[j+1] = t;
\n\t\t\t\t\t\t\t\t\t}
\n\t\t\t\t\t\t}
\n\t\t\t}
\n}]]></string>
    <string name="sortingj"><![CDATA[\nOUTPUT:
\nEnter the size of the list: 5 \nEnter 5 elements: 5 1 4 2 3
\nSorted Elements: 1 2 3 4 5]]></string>
    <string name="operatorsa"><![CDATA[\n->\t\t\tC language supports a rich set of built-in operators.\n->\t\t\tAn operator is a symbol that tells the compiler to perform a certain mathematical or logical manipulation. Operators are used in programs to manipulate data and variables.\n\n->C operators can be classified into following types:\n1.Arithmetic operators\n2.Relational operators\n3.Logical operators\n4.Bitwise operators\n5.Assignment operators\n6.Conditional operators\n7.Special operators\n]]></string>
    <string name="operatorsb"><![CDATA[\n1.ARITHMETIC OPERATORS:\n->\t\t\tC supports all the basic arithmetic operators. The following table shows all the basic arithmetic operators.]]></string>
    <string name="operatorsc"><![CDATA[\n2.RELATIONAL OPERATORS:\n->\t\t\tWe often compare two quantities and depending on their relation take certain decisions for that comparison we use relational operators.\n]]></string>
    <string name="operatorsd"><![CDATA[\n3.LOGICAL OPERATOTS:\n->\t\t\t An expression of this kind which combines two or more relational expressions is termed as a logical expressions or a compound relational expression.\n]]></string>
    <string name="operatorse"><![CDATA[\n4. BIT WISE OPERATORS :\n->\t\t\tC supports special operators known as bit wise operators for manipulation of data at bit level. They are not applied to float or double. \n ]]></string>
    <string name="operatorsf"><![CDATA[\n5.ASSIGNMENT OPERATORS :\n->\t\t\tThey are used to assign the result of an expression to a variable. The assignment operator is "=".\n]]></string>
    <string name="operatorsg"><![CDATA[\n6.CONDITIONAL OPERATOR :\n->\t\t\tA ternary operator pair "?:" is available in C to construct conditional expressions of the form\t\t\t\t\t\t\t\t\texp1 ? exp2 : exp3;\nIt work as\n\t\t\tif exp1 is true then exp2 else exp3\n]]></string>
    <string name="operatorsh"><![CDATA[\n7.SPECIAL OPERATORS :\n->\t\t\tThese operators which do not fit in any of the above classification are ,(comma), sizeof, Pointer operators(& and *) and member selection operators (. and ->).\n->\t\t\tThe comma operator is used to link related expressions together.  sizeof operator is used to know the sizeof operand\n]]></string>
</resources>