<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <ScrollView android:layout_width="match_parent" android:layout_height="match_parent">

        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginLeft="5dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:text="SORTING"
                android:fontFamily="serif"
                android:textColor="#0462A9"
                android:textSize="25sp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/sortinga"
                android:textColor="#000"
                android:textSize="20sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textStyle="normal" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="SELECTION SORT"
                android:fontFamily="serif"
                android:textColor="#0462A9"
                android:textSize="25sp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/sortingb"
                android:textColor="#000"
                android:textSize="20sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textStyle="normal" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/sortingc"
                android:textColor="#000"
                android:textSize="20sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textStyle="normal" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/sortingd"
                android:textColor="#000"
                android:textSize="20sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textStyle="normal" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="INSERTION SORT"
                android:fontFamily="serif"
                android:textColor="#0462A9"
                android:textSize="25sp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/sortinge"
                android:textColor="#000"
                android:textSize="20sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textStyle="normal" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/sortingf"
                android:textColor="#000"
                android:textSize="20sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textStyle="normal" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/sortingg"
                android:textColor="#000"
                android:textSize="20sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textStyle="normal" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="BUBBLE SORT"
                android:fontFamily="serif"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textColor="#0462A9"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/sortingh"
                android:textColor="#000"
                android:textSize="20sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textStyle="normal" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/sortingi"
                android:textColor="#000"
                android:textSize="20sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textStyle="normal" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/sortingj"
                android:textColor="#000"
                android:textSize="20sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textStyle="normal" />
            <Button
                android:id="@+id/button214"
                android:text="LEARN MORE"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="#2E7D32"
                android:onClick="browser131"
                android:textColor="#FFFFFF"
                android:textSize="22sp" />

            <Button
                android:id="@+id/button215"
                android:layout_width="150dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/youtube1"
                android:onClick="browser132"
                android:textColor="#FFFFFF"
                android:textSize="22sp" />



        </LinearLayout>
    </ScrollView>
</RelativeLayout>