<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <ScrollView android:layout_width="match_parent" android:layout_height="match_parent">

        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginLeft="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:text="OPERATORS"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:fontFamily="serif"
                android:textColor="#0462A9"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/operatorsa"
                android:textColor="#000"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textStyle="normal" />

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="wrap_content"
                android:layout_height="250dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@drawable/aritmetic1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/operatorsb"
                android:textColor="#000"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textStyle="normal" />

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="wrap_content"
                android:layout_height="250dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@drawable/arithmetic" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/operatorsc"
                android:textColor="#000"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textStyle="normal" />

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="wrap_content"
                android:layout_height="250dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@drawable/relational" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/operatorsd"
                android:textColor="#000"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textStyle="normal" />

            <ImageView
                android:id="@+id/imageView13"
                android:layout_width="wrap_content"
                android:layout_height="250dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@drawable/logical" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/operatorse"
                android:textColor="#000"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textStyle="normal" />


            <ImageView
                android:id="@+id/imageView18"
                android:layout_width="wrap_content"
                android:layout_height="250dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@drawable/bitwise" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/operatorsf"
                android:textColor="#000"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textStyle="normal" />


            <ImageView
                android:id="@+id/imageView19"
                android:layout_width="wrap_content"
                android:layout_height="250dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@drawable/assignment" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/operatorsg"
                android:textColor="#000"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textStyle="normal" />


            <ImageView
                android:id="@+id/imageView20"
                android:layout_width="wrap_content"
                android:layout_height="250dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@drawable/conditional" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/operatorsh"
                android:textColor="#000"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textStyle="normal" />

            <ImageView
                android:id="@+id/imageView21"
                android:layout_width="wrap_content"
                android:layout_height="250dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@drawable/special" />
            <Button
                android:id="@+id/button102"
                android:text="LEARN MORE"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="#2E7D32"
                android:onClick="browser23"
                android:textColor="#FFFFFF"
                android:textSize="22sp" />

            <Button
                android:id="@+id/button103"
                android:layout_width="150dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/youtube1"
                android:onClick="browser24"
                android:textColor="#FFFFFF"
                android:textSize="22sp" />


        </LinearLayout>
    </ScrollView>
</RelativeLayout>