<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <ScrollView android:layout_width="match_parent" android:layout_height="match_parent">

        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginLeft="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:text="PROGRAM DEVELOPMENT STEPS"
                android:fontFamily="serif"
                android:textColor="#0462A9"
                android:textSize="25sp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/programdsteps"
                android:textColor="#000"
                android:textSize="20sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textStyle="normal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Understand the problem:"
                android:fontFamily="serif"
                android:textColor="#0462A9"
                android:textSize="25dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/understand"
                android:textColor="#000"
                android:textSize="20sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textStyle="normal"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Develop the solution:"
                android:fontFamily="serif"
                android:textColor="#0462A9"
                android:textSize="25dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/developsolution"
                android:textColor="#000"
                android:textSize="20sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textStyle="normal" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Write the program:"
                android:fontFamily="serif"
                android:textColor="#0462A9"
                android:textSize="25dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/whatthe"
                android:textColor="#000"
                android:textSize="20sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textStyle="normal" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Test the Program:"
                android:fontFamily="serif"
                android:textColor="#0462A9"
                android:textSize="25dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/testing"
                android:textColor="#000"
                android:textSize="20sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textStyle="normal" />

            <Button
                android:id="@+id/button50"
                android:text="LEARN MORE"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:background="#2E7D32"
                android:onClick="browser5"
                android:textColor="#FFFFFF"
                android:textSize="22sp" />

            <Button
                android:id="@+id/button69"
                android:layout_width="150dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/youtube1"
                android:onClick="browser6"
                android:textColor="#FFFFFF"
                android:textSize="22sp" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>